k8s/overlays/netcup/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s8njee-web
spec:
  template:
    spec:
      imagePullSecrets:
        - name: registry-s8njee-pull
      containers:
        - name: web
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: blog.s8njee.com
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: blog.s8njee.com
