k8s/overlays/netcup/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s8njee-postgres-headless
spec:
  clusterIP: None
  selector:
    app: s8njee-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
