k8s/overlays/netcup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s8njee-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - blog.s8njee.com
      secretName: blog-s8njee-com-tls
  rules:
    - host: blog.s8njee.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s8njee-web
                port:
                  name: http
